<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNote.AddNoteActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAdd"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:civ_border_width=".5dp"
                app:civ_border_color="#FF000000"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/cardViewStyleAddNote"
                >
                <EditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titleNo_hint"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords"
                    android:textSize="17sp"
                    />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/cardViewStyleAddNote"

                >
                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:hint="@string/where_is_this_note_for_hint"
                    android:padding="10dp"
                    />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/cardViewStyleAddNote"

                >
                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"

                    android:text="@string/time_hint"
                    android:padding="10dp"
                    />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/cardViewStyleAddNote">
                <EditText
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:hint="@string/is_there_anything_else_you_would_like_to_say_hint"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:textSize="17sp"
                    android:minLines="3"
                    android:inputType="textMultiLine|textCapSentences"
                    />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        android:elevation="10dp"
        android:text="@string/save_btn"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>